--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -1,41 +1,48 @@
+{% load static %}
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
     <div class="container">
+        {% comment %} fix index.html later {% endcomment %}
         <a class="navbar-brand" href="index.html">
-        <img src="assets/img/logo.png" class="logo" alt="" />
+            <img src={% static "img/logo.png" %} class="logo" alt="" />
         </a>
         <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNavAltMarkup"
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarNavAltMarkup"
         >
-        <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <ul class="navbar-nav">
             <li class="nav-item active mr-3">
+            {% comment %} fix home.html later {% endcomment %}   
             <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item mr-3">
+            {% comment %} fix about.html later {% endcomment %}
             <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item mr-3">
+            {% comment %} fix listing.html later {% endcomment %}
             <a class="nav-link" href="listings.html">Featured Listings</a>
             </li>
         </ul>
 
         <ul class="navbar-nav ml-auto">
             <li class="nav-item mr-3">
+            {% comment %} fix register.html later {% endcomment %}
             <a class="nav-link" href="register.html">
                 <i class="fas fa-user-plus"></i> Register</a
             >
             </li>
             <li class="nav-item mr-3">
+            {% comment %} fix login.html later {% endcomment %}
             <a class="nav-link" href="login.html">
-                <i class="fas fa-sign-in-alt"></i>
-
+                <i class="fas fa-sign-in-alt"></i>                
                 Login</a
+            
             >
             </li>
         </ul>
