Step 6 build pages app

--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -22,6 +22,7 @@
         <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
+            {% comment %} fix .html later {% endcomment %}
             <a href="index.html"> <i class="fas fa-home"></i> Home</a>
             </li>
             <li class="breadcrumb-item active">About</li>
@@ -79,6 +80,7 @@
         aperiam, unde aliquid at similique!
     </h4>
     <hr />
+    {% comment %} fix .html later {% endcomment %}    
     <a href="listings.html" class="btn btn-secondary text-white btn-lg"
         >View Our Featured Listings</a
     >
