--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -13,6 +13,7 @@
             tempore! Consectetur, id commodi!
             </p>
             <div class="search">
+            {% comment %} fix search.html later {% endcomment %}                
             <form action="search.html">
                 <!-- Form Row 1 -->
                 <div class="form-row">
@@ -165,6 +166,7 @@
                 </div>
                 </div>
                 <hr />
+                {% comment %} fix listing.html later {% endcomment %}                
                 <a href="listing.html" class="btn btn-primary btn-block"
                 >More Info</a
                 >
@@ -224,6 +226,7 @@
                 </div>
                 </div>
                 <hr />
+                {% comment %} fix listing.html later {% endcomment %}                
                 <a href="listing.html" class="btn btn-primary btn-block"
                 >More Info</a
                 >
@@ -281,6 +284,7 @@
                 </div>
                 </div>
                 <hr />
+                {% comment %} fix .html later {% endcomment %}
                 <a href="listing.html" class="btn btn-primary btn-block"
                 >More Info</a
                 >
