--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -1,5 +1,8 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %} 
 
+{% load static %}
+
+{% block content %}
 
 <section id="showcase-inner" class="py-5 text-white">
     <div class="container">
@@ -31,6 +34,7 @@
     </div>
 </section>
 
+
 <section id="about" class="py-4">
 <div class="container">
     <div class="row">
@@ -40,7 +44,7 @@
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt,
         pariatur!
         </p>
-        <img src="assets/img/about.jpg" alt="" />
+        <img src={% static "img/about.jpg" %} alt="" />
         <p class="mt-4">
         Lorem ipsum dolor sit amet consectetur adipisicing elit.
         Perspiciatis esse officia repudiandae ad saepe ex, amet neque quod
@@ -53,7 +57,7 @@
         <div class="card">
         <img
             class="card-img-top"
-            src="assets/img/realtors/kyle.jpg"
+            src={% static "img/realtors/kyle.jpg" %}
             alt="Seller of the month"
         />
         <div class="card-body">
@@ -93,8 +97,9 @@
     <h2 class="text-center">Our Team</h2>
     <div class="row text-center">
         <div class="col-md-4">
+        {% comment %}  {% endcomment %}
         <img
-            src="assets/img/realtors/kyle.jpg"
+            src={% static "img/realtors/kyle.jpg" %}
             alt=""
             class="rounded-circle mb-3"
         />
@@ -108,8 +113,9 @@
         </div>
 
         <div class="col-md-4">
+        {% comment %}  {% endcomment %}
         <img
-            src="assets/img/realtors/mark.jpg"
+            src={% static "img/realtors/mark.jpg" %}
             alt=""
             class="rounded-circle mb-3"
         />
@@ -121,8 +127,9 @@
         </div>
 
         <div class="col-md-4">
+        {% comment %}  {% endcomment %}
         <img
-            src="assets/img/realtors/jenny.jpg"
+            src={% static "img/realtors/jenny.jpg" %}
             alt=""
             class="rounded-circle mb-3"
         />
@@ -135,5 +142,6 @@
     </div>
     </div>
 </section>
+
 
 {% endblock %}
