--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -3,26 +3,30 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
     <div class="container">
         {% comment %} fix index.html later {% endcomment %}
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href={% url "index" %}>
             <img src={% static "img/logo.png" %} class="logo" alt="" />
         </a>
+        
         <button
             class="navbar-toggler"
             type="button"
             data-toggle="collapse"
             data-target="#navbarNavAltMarkup"
         >
+        
             <span class="navbar-toggler-icon"></span>
+        
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <ul class="navbar-nav">
-            <li class="nav-item active mr-3">
+        <ul class="navbar-nav">   
+            <li {% if "/" == request.path %} class="nav-item active mr-3" {% else %} class="nav-item mr-3" {% endif %}>
             {% comment %} fix home.html later {% endcomment %}   
-            <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-link" href={% url "index" %}>Home</a>
             </li>
-            <li class="nav-item mr-3">
+            <li {% if "about" in request.path %} class="nav-item active mr-3" {% else %} class="nav-item mr-3" {% endif %}>    
+            {% comment %} <li class="nav-item mr-3"> {% endcomment %}
             {% comment %} fix about.html later {% endcomment %}
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href={% url "about" %}>About</a>
             </li>
             <li class="nav-item mr-3">
             {% comment %} fix listing.html later {% endcomment %}
