--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -25,12 +25,13 @@
             </li>
             <li {% if "about" in request.path %} class="nav-item active mr-3" {% else %} class="nav-item mr-3" {% endif %}>    
             {% comment %} <li class="nav-item mr-3"> {% endcomment %}
-            {% comment %} fix about.html later {% endcomment %}
+            {% comment %} fix about.html later {% endcomment %}            
             <a class="nav-link" href={% url "about" %}>About</a>
             </li>
             <li class="nav-item mr-3">
             {% comment %} fix listing.html later {% endcomment %}
-            <a class="nav-link" href="listings.html">Featured Listings</a>
+            <li {% if "listings" in request.path %} class="nav-item active mr-3" {% else %} class="nav-item mr-3" {% endif %}> 
+            <a class="nav-link" href={% url "listings" %}>Featured Listings</a>
             </li>
         </ul>
 
