--- a/templates/listings/listings.html
+++ b/templates/listings/listings.html
@@ -22,16 +22,17 @@
 
 <!-- Breadcrumb -->
 <section id="bc" class="mt-3">
-<div class="container">
-    <nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-        <li class="breadcrumb-item">
-        <a href="index.html"> <i class="fas fa-home"></i> Home</a>
-        </li>
-        <li class="breadcrumb-item active">Browse Listings</li>
-    </ol>
-    </nav>
-</div>
+    <div class="container">
+        <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item">
+            {% comment %}  {% endcomment %}
+            <a href={% url "index" %}> <i class="fas fa-home"></i> Home</a>
+            </li>
+            <li class="breadcrumb-item active">Browse Listings</li>
+        </ol>
+        </nav>
+    </div>
 </section>
 
 <!-- Listings -->
@@ -43,6 +44,7 @@
         <div class="card listing-preview">
         <img
             class="card-img-top"
+            {% comment %}  {% endcomment %}
             src="assets/img/homes/home-1.jpg"
             alt=""
         />
@@ -90,6 +92,7 @@
             </div>
             </div>
             <hr />
+            {% comment %}  {% endcomment %}
             <a href="listing.html" class="btn btn-primary btn-block"
             >More Info</a
             >
@@ -102,6 +105,7 @@
         <div class="card listing-preview">
         <img
             class="card-img-top"
+            {% comment %}  {% endcomment %}
             src="assets/img/homes/home-2.jpg"
             alt=""
         />
@@ -147,6 +151,7 @@
             </div>
             </div>
             <hr />
+            {% comment %}  {% endcomment %}
             <a href="listing.html" class="btn btn-primary btn-block"
             >More Info</a
             >
@@ -159,6 +164,7 @@
         <div class="card listing-preview">
         <img
             class="card-img-top"
+            {% comment %}  {% endcomment %}
             src="assets/img/homes/home-3.jpg"
             alt=""
         />
@@ -204,6 +210,7 @@
             </div>
             </div>
             <hr />
+            {% comment %}  {% endcomment %}
             <a href="listing.html" class="btn btn-primary btn-block"
             >More Info</a
             >
@@ -216,6 +223,7 @@
         <div class="card listing-preview">
         <img
             class="card-img-top"
+            {% comment %}  {% endcomment %}
             src="assets/img/homes/home-4.jpg"
             alt=""
         />
@@ -262,6 +270,7 @@
             </div>
             </div>
             <hr />
+            {% comment %}  {% endcomment %}
             <a href="listing.html" class="btn btn-primary btn-block"
             >More Info</a
             >
@@ -274,6 +283,7 @@
         <div class="card listing-preview">
         <img
             class="card-img-top"
+            {% comment %}  {% endcomment %}
             src="assets/img/homes/home-5.jpg"
             alt=""
         />
@@ -318,6 +328,7 @@
             </div>
             </div>
             <hr />
+            {% comment %}  {% endcomment %}
             <a href="listing.html" class="btn btn-primary btn-block"
             >More Info</a
             >
@@ -330,6 +341,7 @@
         <div class="card listing-preview">
         <img
             class="card-img-top"
+            {% comment %}  {% endcomment %}
             src="assets/img/homes/home-6.jpg"
             alt=""
         />
@@ -374,6 +386,7 @@
             </div>
             </div>
             <hr />
+            {% comment %}  {% endcomment %}
             <a href="listing.html" class="btn btn-primary btn-block"
             >More Info</a
             >
