Step 13 class update

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href={% static "css/style.css" %} />
     <!-- Lightbox -->
     <link rel="stylesheet" href={% static "css/lightbox.min.css" %} />
+    <link rel="shortcut icon" href="#">
     <title>BC Real Estate</title>
   </head>
 
