--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -26,9 +26,9 @@
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
             {% comment %} fix .html later {% endcomment %}
-            <a href="index.html"> <i class="fas fa-home"></i> Home</a>
+            <a href={% url "index" %}> <i class="fas fa-home"></i> Home</a>            
             </li>
-            <li class="breadcrumb-item active">About</li>
+            <li class="breadcrumb-item active">about</li>
         </ol>
         </nav>
     </div>
@@ -53,23 +53,28 @@
                 harum perferendis laborum molestias quia.
                 </p>
             </div>
+            {% comment %} mvp {% endcomment %}
+            {% if mvp_realtors %}
             <div class="col-md-4">
+                {% for realtor in mvp_realtors %}
                 <div class="card">
                     <img
                         class="card-img-top"
-                        src={% static "img/realtors/kyle.jpg" %}
+                        src={{ realtor.photo.url }}
                         alt="Seller of the month"
                     />
                     <div class="card-body">
                         <h5 class="card-title">Seller Of The Month</h5>
-                        <h6 class="text-secondary">Kyle chan</h6>
+                        <h6 class="text-secondary">{{ realtor.name }}</h6>
                         <p class="card-text">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
                         nesciunt amet, illo itaque similique repellat. content.
                         </p>
                     </div>
                 </div>
+                {% endfor %}
             </div>
+            {% endif %}
         </div>
     </div>
 </section>
@@ -85,7 +90,7 @@
     </h4>
     <hr />
     {% comment %} fix .html later {% endcomment %}    
-    <a href="listings.html" class="btn btn-secondary text-white btn-lg"
+    <a href={% url "listings" %} class="btn btn-secondary text-white btn-lg"
         >View Our Featured Listings</a
     >
 </section>
@@ -96,49 +101,31 @@
     <div class="container">
     <h2 class="text-center">Our Team</h2>
     <div class="row text-center">
+        {% if realtors %}
+        {% for realtor in realtors %}
         <div class="col-md-4">
-        {% comment %}  {% endcomment %}
-        <img
-            src={% static "img/realtors/kyle.jpg" %}
-            alt=""
-            class="rounded-circle mb-3"
-        />
-        <h4>Kyle Chan</h4>
-        <p class="text-success">
-            <i class="fas fa-award text-success mb-3"></i> Realtor
-        </p>
-        <hr />
-        <p><i class="fas fa-phone"></i> (852)-555-5555</p>
-        <p><i class="fas fa-envelope-open"></i> kyle@bcrealestate.co</p>
+            {% comment %}  {% endcomment %}
+            <img
+                src={{ realtor.photo.url }}
+                alt=""
+                class="rounded-circle mb-3"
+            />
+            <h4>{{ realtor.name }}</h4>
+            <p class="text-success">
+                <i class="fas fa-award text-success mb-3"></i> Realtor
+            </p>
+            <hr />
+            <p><i class="fas fa-phone"></i> {{ realtor.phone }}</p>
+            <p><i class="fas fa-envelope-open"></i> {{ realtor.email }}</p>
         </div>
+        {% endfor %}
+        {% else %}
+            <div class="col-md-12">
+            <p>No Realtor Available</p>
+            </div>
+        {% endif%}
 
-        <div class="col-md-4">
-        {% comment %}  {% endcomment %}
-        <img
-            src={% static "img/realtors/mark.jpg" %}
-            alt=""
-            class="rounded-circle mb-3"
-        />
-        <h4>Mark Lee</h4>
-        <p class="text-success">Realtor</p>
-        <hr />
-        <p><i class="fas fa-phone"></i> (852)-444-4444</p>
-        <p><i class="fas fa-envelope-open"></i> mark@bcrealestate.co</p>
-        </div>
 
-        <div class="col-md-4">
-        {% comment %}  {% endcomment %}
-        <img
-            src={% static "img/realtors/jenny.jpg" %}
-            alt=""
-            class="rounded-circle mb-3"
-        />
-        <h4>Jenny Cheung</h4>
-        <p class="text-success">Realtor</p>
-        <hr />
-        <p><i class="fas fa-phone"></i> (852)-333-3333</p>
-        <p><i class="fas fa-envelope-open"></i> jenny@bcrealestate.co</p>
-        </div>
     </div>
     </div>
 </section>
