--- a/templates/listings/search.html
+++ b/templates/listings/search.html
@@ -2,12 +2,175 @@
 
 {% load static %}
 
+{% load humanize %}
+
 {% block content %}
 
 
 
-<h1>search</h1>
 
+<section id="showcase-inner" class="showcase-search text-white py-5">
+    <div class="container">
+        <div class="row text-center">
+            <div class="col-md-12">
+            <form action={% url "search" %}>
+                <!-- Form Row 1 -->
+                <div class="form-row">
+                <div class="col-md-4 mb-3">
+                    <label class="sr-only">Keywords</label>
+                    <input
+                    type="text"
+                    name="keywords"
+                    class="form-control"%
+                    placeholder="Keyword (Bathrooms, ClubHouse, etc)"
+                    />
+                </div>
+
+                <div class="col-md-4 mb-3">
+                    <label class="sr-only">City</label>
+                    <input
+                    type="text"
+                    name="Street"
+                    class="form-control"
+                    placeholder="Street"
+                    />
+                </div>
+
+                <div class="col-md-4 mb-3">
+                    <label class="sr-only">District</label>
+                    <select name="District" class="form-control">
+                    <option selected="true" disabled="disabled">
+                        Districts (All)
+                    </option>
+                    {% for key, value in district_choices.items %}
+                    <option value={{ key }}>{{ value }}</option>
+                    {% endfor %}
+                    </select>
+                </div>
+                </div>
+                <!-- Form Row 2 -->
+                <div class="form-row">
+                <div class="col-md-6 mb-3">
+                    <label class="sr-only">Bedrooms</label>
+                    <select name="bedrooms" class="form-control">
+                    <option selected="true" disabled="disabled">
+                        Bedrooms (Any)
+                    </option>
+                    {% for key, value in bedroom_choices.items %}                    
+                    <option value={{ key }}>{{ value }}</option>
+                    {% endfor %}
+                    </select>
+                </div>
+                <div class="col-md-6 mb-3">
+                    <select name="price" class="form-control">
+                    <option selected="true" disabled="disabled">
+                        Max Price (All)
+                    </option>
+                    {% for key, value in price_choices.items %}   
+                    <option value={{ key }}>{{ value }}</option>
+                    {% endfor %}
+                    </select>
+                </div>
+                </div>
+                <button class="btn btn-secondary btn-block mt-4" type="submit">
+                Submit form
+                </button>
+            </form>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
+<!-- Breadcrumb -->
+<section id="bc" class="mt-3">
+    <div class="container">
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+            <li class="breadcrumb-item">
+                <a href={% url "index" %}> <i class="fas fa-home"></i> Home</a>
+            </li>
+            <li class="breadcrumb-item">
+                <a href={% url "listings" %}>Browse Listings</a>
+            </li>
+            <li class="breadcrumb-item active">Search Results</li>
+            </ol>
+        </nav>
+    </div>
+</section>
+
+
+{% comment %}
+
+
+<!-- Listings -->
+<section id="listings" class="py-4">
+    <div class="container">
+        <div class="row">
+            <!-- Listing 1 -->
+            <div class="col-md-6 col-lg-4 mb-4">
+                <div class="card listing-preview">
+                    <img
+                    class="card-img-top"
+                    src="assets/img/homes/home-1.jpg"
+                    alt=""
+                    />
+                    <div class="card-img-overlay">
+                        <h2>
+                            <span class="badge badge-secondary text-white">$490,000</span>
+                        </h2>
+                    </div>
+                    <div class="card-body">
+                        <div class="listing-heading text-center">
+                            <h4 class="text-primary">45 Prince Street</h4>
+                            <p>
+                            <i class="fas fa-map-marker text-secondary"></i> Yau Tsim
+                            Mong
+                            </p>
+                        </div>
+                        <hr />
+                        <div class="row py-2 text-secondary">
+                            <div class="col-6">
+                            <i class="fas fa-th-large"></i> Sqft: 3200
+                            </div>
+                            <div class="col-6">
+                            <i class="fas fa-car"></i> ClubHouse: 2
+                            </div>
+                        </div>
+                        <div class="row py-2 text-secondary">
+                            <div class="col-6">
+                            <i class="fas fa-bed"></i> Bedrooms: 3
+                            </div>
+                            <div class="col-6">
+                            <i class="fas fa-bath"></i> Bathrooms: 2
+                            </div>
+                        </div>
+                        <hr />
+                        <div class="row py-2 text-secondary">
+                            <div class="col-12">
+                            <i class="fas fa-user"></i> Kyle Chan
+                            </div>
+                        </div>
+                        <div class="row text-secondary pb-2">
+                            <div class="col-6">
+                            <i class="fas fa-clock"></i> 2 days ago
+                            </div>
+                        </div>
+                        <hr />
+                        <a href={% url "listing" listing.id %} class="btn btn-primary btn-block"
+                            >More Info</a
+                        >
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
+
+
+{% endcomment %}
 
 {% endblock %}
 
