--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -9,110 +9,83 @@
 
     <div class="container text-center">
         <div class="home-search p-5">
-        <div class="overlay p-5">
-            <h1 class="display-4 mb-4">Property Searching Just Got So Easy</h1>
-            <p class="lead">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-            Recusandae quas, asperiores eveniet vel nostrum magnam voluptatum
-            tempore! Consectetur, id commodi!
-            </p>
-            <div class="search">
-            {% comment %} fix search.html later {% endcomment %}                
-            <form action="search.html">
-                <!-- Form Row 1 -->
-                <div class="form-row">
-                <div class="col-md-4 mb-3">
-                    <label class="sr-only">Keywords</label>
-                    <input
-                    type="text"
-                    name="keywords"
-                    class="form-control"
-                    placeholder="Keyword (Bathrooms, ClubHouse, etc)"
-                    />
-                </div>
+            <div class="overlay p-5">
+                <h1 class="display-4 mb-4">Property Searching Just Got So Easy</h1>
+                <p class="lead">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Recusandae quas, asperiores eveniet vel nostrum magnam voluptatum
+                tempore! Consectetur, id commodi!
+                </p>
+                <div class="search">
+                {% comment %} fix search.html later {% endcomment %}                
+                    <form action={% url "search" %}>
+                        <!-- Form Row 1 -->
+                        <div class="form-row">
+                            <div class="col-md-4 mb-3">
+                                <label class="sr-only">Keywords</label>
+                                <input
+                                type="text"
+                                name="keywords"
+                                class="form-control"
+                                placeholder="Keyword (Bathrooms, ClubHouse, etc)"
+                                />
+                            </div>
 
-                <div class="col-md-4 mb-3">
-                    <label class="sr-only">street</label>
-                    <input
-                    type="text"
-                    name="street"
-                    class="form-control"
-                    placeholder="Street"
-                    />
-                </div>
+                            <div class="col-md-4 mb-3">
+                                <label class="sr-only">street</label>
+                                <input
+                                type="text"
+                                name="street"
+                                class="form-control"
+                                placeholder="Street"
+                                />
+                            </div>
 
-                <div class="col-md-4 mb-3">
-                    <label class="sr-only">District</label>
-                    <select name="district" class="form-control">
-                    <option selected="true" d<h1>index page</h1>ict (All)
-                    </option>
-                    <option value="IL">Islands</option>
-                    <option value="KT">Kwai Tsing</option>
-                    <option value="NR">North</option>
-                    <option value="SK">Sai Kung</option>
-                    <option value="ST">Sha Tin</option>
-                    <option value="TP">Tai Po</option>
-                    <option value="TW">Tsuen Wan</option>
-                    <option value="TM">Tuen Mun</option>
-                    <option value="YL">Yuen Long</option>
-                    <option value="KC">Kowloon City</option>
-                    <option value="KW">Kwun Tong</option>
-                    <option value="SS">Sham Shui Po</option>
-                    <option value="WT">Wong Tai Sin</option>
-                    <option value="YM">Yau Tsim Mong</option>
-                    <option value="CW">Central & Western</option>
-                    <option value="ER">Eastern</option>
-                    <option value="SR">Southern</option>
-                    <option value="WC">Wan Chai</option>
-                    </select>
+                            <div class="col-md-4 mb-3">
+                                <label class="sr-only">District</label>
+                                <select name="district" class="form-control">
+                                    <option selected="true" d<h1>index page</h1>ict (All)
+                                    </option>
+                                    {% for key, value in district_choices.items %}
+                                    <option value={{ key }}>{{ value }}</option> 
+                                    {% endfor %}
+
+                                </select>
+                            </div>
+                        </div>
+                        <!-- Form Row 2 -->
+                        <div class="form-row">
+                            <div class="col-md-6 mb-3">
+                                <label class="sr-only">Bedrooms</label>
+                                <select name="bedrooms" class="form-control">
+                                    <option selected="true" disabled="disabled">
+                                        Bedrooms (All)
+                                    </option>
+                                    {% for key, value in bedroom_choices.items %}                    
+                                    <option value={{ key }}>{{ value }}</option>
+                                    {% endfor %}
+                                </select>
+                            </div>
+                            <div class="col-md-6 mb-3">
+                                <select name="price" class="form-control" id="type">
+                                    <option selected="true" disabled="disabled">
+                                        Max Price (Any)
+                                    </option>
+                                    {% for key, value in price_choices.items %}    
+                                    <option value={{ key }}>{{ value }}</option>
+                                    {% endfor %}   
+                                </select>
+                            </div>
+                        </div>
+                        <button class="btn btn-secondary btn-block mt-4" type="submit">
+                        Submit form
+                        </button>
+                    </form>
                 </div>
-                </div>
-                <!-- Form Row 2 -->
-                <div class="form-row">
-                <div class="col-md-6 mb-3">
-                    <label class="sr-only">Bedrooms</label>
-                    <select name="bedrooms" class="form-control">
-                    <option selected="true" disabled="disabled">
-                        Bedrooms (All)
-                    </option>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                    <option value="5">5</option>
-                    <option value="6">6</option>
-                    <option value="7">7</option>
-                    <option value="8">8</option>
-                    <option value="9">9</option>
-                    <option value="10">10</option>
-                    </select>
-                </div>
-                <div class="col-md-6 mb-3">
-                    <select name="price" class="form-control" id="type">
-                    <option selected="true" disabled="disabled">
-                        Max Price (Any)
-                    </option>
-                    <option value="1000000">$1,000,000</option>
-                    <option value="2000000">$2,000,000</option>
-                    <option value="3000000">$3,000,000</option>
-                    <option value="4000000">$4,000,000</option>
-                    <option value="5000000">$5,000,000</option>
-                    <option value="6000000">$6,000,000</option>
-                    <option value="7000000">$7,000,000</option>
-                    <option value="8000000">$8,000,000</option>
-                    <option value="9000000">$9,000,000</option>
-                    <option value="10000000">$10M+</option>
-                    </select>
-                </div>
-                </div>
-                <button class="btn btn-secondary btn-block mt-4" type="submit">
-                Submit form
-                </button>
-            </form>
             </div>
         </div>
-        </div>
     </div>
+
 </section>
 
 <!-- Listings -->
