--- a/templates/listings/search.html
+++ b/templates/listings/search.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="row text-center">
             <div class="col-md-12">
-            <form action={% url "search" %}>
+            <form action={% url "search" %} method="GET">
                 <!-- Form Row 1 -->
                 <div class="form-row">
                 <div class="col-md-4 mb-3">
@@ -23,6 +23,7 @@
                     name="keywords"
                     class="form-control"%
                     placeholder="Keyword (Bathrooms, ClubHouse, etc)"
+                    value="{{ values.keywords }}"
                     />
                 </div>
 
@@ -30,20 +31,23 @@
                     <label class="sr-only">City</label>
                     <input
                     type="text"
-                    name="Street"
+                    name="title"
                     class="form-control"
-                    placeholder="Street"
+                    placeholder="Title"
+                    value="{{ values.title }}"                   
                     />
                 </div>
 
                 <div class="col-md-4 mb-3">
                     <label class="sr-only">District</label>
-                    <select name="District" class="form-control">
+                    <select name="district" class="form-control">
                     <option selected="true" disabled="disabled">
                         Districts (All)
                     </option>
                     {% for key, value in district_choices.items %}
-                    <option value={{ key }}>{{ value }}</option>
+                    <option value="{{ key }}"
+                    {% if key == values.district %} selected {% endif %}
+                    >{{ value }}</option>
                     {% endfor %}
                     </select>
                 </div>
@@ -57,7 +61,9 @@
                         Bedrooms (Any)
                     </option>
                     {% for key, value in bedroom_choices.items %}                    
-                    <option value={{ key }}>{{ value }}</option>
+                    <option value="{{ key }}"
+                    {% if key == values.bedrooms %} selected {% endif %}
+                    >{{ value }}</option>
                     {% endfor %}
                     </select>
                 </div>
@@ -67,7 +73,9 @@
                         Max Price (All)
                     </option>
                     {% for key, value in price_choices.items %}   
-                    <option value={{ key }}>{{ value }}</option>
+                    <option value="{{ key }}"
+                    {% if key == values.price %} selected {% endif %}                   
+                    >{{ value }}</option>
                     {% endfor %}
                     </select>
                 </div>
@@ -101,7 +109,7 @@
 </section>
 
 
-{% comment %}
+
 
 
 <!-- Listings -->
@@ -109,68 +117,76 @@
     <div class="container">
         <div class="row">
             <!-- Listing 1 -->
-            <div class="col-md-6 col-lg-4 mb-4">
-                <div class="card listing-preview">
-                    <img
-                    class="card-img-top"
-                    src="assets/img/homes/home-1.jpg"
-                    alt=""
-                    />
-                    <div class="card-img-overlay">
-                        <h2>
-                            <span class="badge badge-secondary text-white">$490,000</span>
-                        </h2>
-                    </div>
-                    <div class="card-body">
-                        <div class="listing-heading text-center">
-                            <h4 class="text-primary">45 Prince Street</h4>
-                            <p>
-                            <i class="fas fa-map-marker text-secondary"></i> Yau Tsim
-                            Mong
-                            </p>
+
+            {% if listings %}
+            {%for listing in listings %}
+                <div class="col-md-6 col-lg-4 mb-4">
+                    <div class="card listing-preview">
+                        <img
+                        class="card-img-top"
+                        src={{ listing.photo_main.url }}
+                        alt=""
+                        />
+                        <div class="card-img-overlay">
+                            <h2>
+                                <span class="badge badge-secondary text-white">{{ listing.price|intcomma }}</span>
+                            </h2>
                         </div>
-                        <hr />
-                        <div class="row py-2 text-secondary">
-                            <div class="col-6">
-                            <i class="fas fa-th-large"></i> Sqft: 3200
+                        <div class="card-body">
+                            <div class="listing-heading text-center">
+                                <h4 class="text-primary">{{ listing.title }}</h4>
+                                <p>
+                                <i class="fas fa-map-marker text-secondary"></i>{{ listing.district }}
+                                </p>
                             </div>
-                            <div class="col-6">
-                            <i class="fas fa-car"></i> ClubHouse: 2
+                            <hr />
+                            <div class="row py-2 text-secondary">
+                                <div class="col-6">
+                                <i class="fas fa-th-large"></i> Sqft: {{ listing.sqft|intcomma }}
+                                </div>
+                                <div class="col-6">
+                                <i class="fas fa-car"></i> ClubHouse: {{ listing.clubhouse }}
+                                </div>
                             </div>
+                            <div class="row py-2 text-secondary">
+                                <div class="col-6">
+                                <i class="fas fa-bed"></i> Bedrooms: {{ listing.bedrooms }}
+                                </div>
+                                <div class="col-6">
+                                <i class="fas fa-bath"></i> Bathrooms: {{ listing.bathrooms }}
+                                </div>
+                            </div>
+                            <hr />
+                            <div class="row py-2 text-secondary">
+                                <div class="col-12">
+                                <i class="fas fa-user"></i> {{ listing.realtor.name }}
+                                </div>
+                            </div>
+                            <div class="row text-secondary pb-2">
+                                <div class="col-6">
+                                <i class="fas fa-clock"></i> {{ listing.list_date|timesince }}
+                                </div>
+                            </div>
+                            <hr />
+                            <a href={% url "listing" listing.id %} class="btn btn-primary btn-block"
+                                >More Info</a
+                            >  
                         </div>
-                        <div class="row py-2 text-secondary">
-                            <div class="col-6">
-                            <i class="fas fa-bed"></i> Bedrooms: 3
-                            </div>
-                            <div class="col-6">
-                            <i class="fas fa-bath"></i> Bathrooms: 2
-                            </div>
-                        </div>
-                        <hr />
-                        <div class="row py-2 text-secondary">
-                            <div class="col-12">
-                            <i class="fas fa-user"></i> Kyle Chan
-                            </div>
-                        </div>
-                        <div class="row text-secondary pb-2">
-                            <div class="col-6">
-                            <i class="fas fa-clock"></i> 2 days ago
-                            </div>
-                        </div>
-                        <hr />
-                        <a href={% url "listing" listing.id %} class="btn btn-primary btn-block"
-                            >More Info</a
-                        >
                     </div>
                 </div>
-            </div>
+            {% endfor %}
+            {% else%}
+                <div class="col-md-12">
+                    <p>No Listings found</p>
+                </div>
+            {% endif %}
 
         </div>
     </div>
 </section>
 
 
-{% endcomment %}
+
 
 {% endblock %}
 
