--- a/templates/listings/listing.html
+++ b/templates/listings/listing.html
@@ -14,8 +14,8 @@
         <div class="row text-center">
             <div class="col-md-12">
                 {% comment %}  {% endcomment %}
-                <h1 class="display-4">{{ listing.title }}</h1>
-                <p class="lead"><i class="fas fa-map-marker"></i> {{ listing.district }}</p>
+                <h1 class="display-4">{{ listing.title|title }}</h1>
+                <p class="lead"><i class="fas fa-map-marker"></i> {{ listing.get_district_display }}</p>
             </div>
         </div>
     </div>
@@ -32,7 +32,7 @@
             <li class="breadcrumb-item">
                 <a href={% url "listings" %}>Listings</a>
             </li>
-            <li class="breadcrumb-item active">{{ listing.title }}</li>
+            <li class="breadcrumb-item active">{{ listing.title|title }}</li>
             </ol>
         </nav>
     </div>
