--- a/templates/listings/listings.html
+++ b/templates/listings/listings.html
@@ -59,9 +59,9 @@
                 </div>
                 <div class="card-body">
                     <div class="listing-heading text-center">
-                    <h4 class="text-primary">{{ listing.title }}</h4>
+                    <h4 class="text-primary">{{ listing.title|title }}</h4>
                     <p>
-                        <i class="fas fa-map-marker text-secondary"></i> {{ listing.district }}
+                        <i class="fas fa-map-marker text-secondary"></i> {{ listing.get_district_display }}
                     </p>
                     </div>
                     <hr />
