--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -116,7 +116,7 @@
                     <div class="listing-heading text-center">
                     <h4 class="text-primary">{{ listing.title }}</h4>
                     <p>
-                        <i class="fas fa-map-marker text-secondary"></i>{{ listing.district }}
+                        <i class="fas fa-map-marker text-secondary"></i>{{ listing.get_district_display }}
                     </p>
                     </div>
                     <hr />
