--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -14,43 +14,63 @@
             data-target="#navbarNavAltMarkup"
         >
         
-            <span class="navbar-toggler-icon"></span>
-        
+            <span class="navbar-toggler-icon"></span>        
         </button>
+        
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <ul class="navbar-nav">   
-            <li {% if "/" == request.path %} class="nav-item active mr-3" {% else %} class="nav-item mr-3" {% endif %}>
-            {% comment %} fix home.html later {% endcomment %}   
-            <a class="nav-link" href={% url "index" %}>Home</a>
-            </li>
-            <li {% if "about" in request.path %} class="nav-item active mr-3" {% else %} class="nav-item mr-3" {% endif %}>    
-            {% comment %} <li class="nav-item mr-3"> {% endcomment %}
-            {% comment %} fix about.html later {% endcomment %}            
-            <a class="nav-link" href={% url "about" %}>About</a>
-            </li>
-            <li class="nav-item mr-3">
-            {% comment %} fix listing.html later {% endcomment %}
-            <li {% if "listings" in request.path %} class="nav-item active mr-3" {% else %} class="nav-item mr-3" {% endif %}> 
-            <a class="nav-link" href={% url "listings" %}>Featured Listings</a>
-            </li>
-        </ul>
 
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item mr-3">
-            {% comment %} fix register.html later {% endcomment %}
-            <a class="nav-link" href="register.html">
-                <i class="fas fa-user-plus"></i> Register</a
-            >
-            </li>
-            <li class="nav-item mr-3">
-            {% comment %} fix login.html later {% endcomment %}
-            <a class="nav-link" href="login.html">
-                <i class="fas fa-sign-in-alt"></i>                
-                Login</a
-            
-            >
-            </li>
-        </ul>
+            <ul class="navbar-nav">   
+                <li {% if "/" == request.path %} class="nav-item active mr-3" {% else %} class="nav-item mr-3" {% endif %}>
+                {% comment %} fix home.html later {% endcomment %}   
+                <a class="nav-link" href={% url "index" %}>Home</a>
+                </li>
+                <li {% if "about" in request.path %} class="nav-item active mr-3" {% else %} class="nav-item mr-3" {% endif %}>    
+                {% comment %} <li class="nav-item mr-3"> {% endcomment %}
+                {% comment %} fix about.html later {% endcomment %}            
+                <a class="nav-link" href={% url "about" %}>About</a>
+                </li>
+                <li class="nav-item mr-3">
+                {% comment %} fix listing.html later {% endcomment %}
+                <li {% if "listings" in request.path %} class="nav-item active mr-3" {% else %} class="nav-item mr-3" {% endif %}> 
+                <a class="nav-link" href={% url "listings" %}>Featured Listings</a>
+                </li>
+            </ul>
+
+            <ul class="navbar-nav ml-auto">                
+                {% if user.is_authenticated %}
+                    <li {% if 'dashboard' in request.path %} class="nav-item active mr-3"
+                        {% else %} class="nav-itme mr-3" {% endif %}>
+                    <a class="nav-link" href={% url "dashboard" %}>
+                    Welcome {{ user.username }} (dashboard)</a>
+                    </li>
+                    <li class="nav-item mr-3">
+                        <a class="nav-link" href={% url "logout" %}>
+                            <i class="fas fa-sign-out-alt"></i> Logout</a
+                        >
+                    </li>
+                {% else %}
+                    {% if "register" in request.path %}    
+                        <li class="nav-item mr-3 active">
+                    {% else %}
+                        <li class="nav-item mr-3">                
+                    {% endif %}
+                    <a class="nav-link" href={% url "register" %}>
+                        <i class="fas fa-user-plus"></i> Register</a
+                    >
+                    </li>
+                    {% if "login" in request.path %}              
+                        <li class="nav-item mr-3 active">
+                    {% else %}
+                        <li class="nav-item mr-3">
+                    {% endif %}            
+                    <a class="nav-link" href={% url "login" %}>
+                        <i class="fas fa-sign-in-alt"></i>                
+                        Login</a     
+                    >                   
+                    </li>
+                {% endif %}
+            </ul>
+
         </div>
     </div>
 </nav>
