--- a/templates/base.html
+++ b/templates/base.html
@@ -13,8 +13,11 @@
     <link rel="stylesheet" href={% static "css/style.css" %} />
     <!-- Lightbox -->
     <link rel="stylesheet" href={% static "css/lightbox.min.css" %} />
+    {% comment %}  
     <link rel="shortcut icon" href="#">
-    <title>BC Real Estate</title>
+    {% endcomment %}
+    <link rel="icon" href={% static "img/logo.png" %} sizes="16x16" />
+    <title>BC Real Estate {% block title %}{% endblock %}</title>
   </head>
 
   <body>
