--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -2,7 +2,11 @@
 
 {% load humanize %}
 
+{% block title %} | Welcome {% endblock %}
+
 {% block content %}
+
+{% include 'partials/_alert.html' %}
 
 <!-- Showcase -->
 <section id="showcase">
