--- a/templates/listings/listing.html
+++ b/templates/listings/listing.html
@@ -4,10 +4,11 @@
 
 {% load humanize %}
 
+{% block title %} | {{ listing.title | title }} {% endblock %}
+
 {% block content %}
 
-
-
+{% include 'partials/_alert.html' %}
 
 <section id="showcase-inner" class="py-5 text-white">
     <div class="container">
@@ -229,22 +230,36 @@
             </div>
             <div class="modal-body">
                 {% comment %}  {% endcomment %}
-                <form>
+                <form action="{% url 'contact' %}" method="POST">
+                {% csrf_token %}
+                    {% comment %}  {% endcomment %}
+                    {% if user.is_authenticated %}
+                        <input type="hidden" name="user_id" value={{ user.id }} />
+                    {% else %}
+                        <input type="hidden" name="user_id" value=0 />
+                    {% endif %}
+                    
+                    <input type="hidden" name="realtor_email" value={{ listing.realtor.email }} />
+                    
+                    <input type="hidden" name="listing_id" value={{ listing.id }} />
                     <div class="form-group">
                         <label for="property_name" class="col-form-label"
                             >Property:</label
                         >
                         <input
                             type="text"
-                            name="listing"
+                            name="listing_title"
                             class="form-control"
-                            value="45 Prince Street"
-                            disabled
+                            value="{{ listing.title | title}}"                            
                         />
                     </div>
                     <div class="form-group">
                         <label for="name" class="col-form-label">Name:</label>
-                        <input type="text" name="name" class="form-control" required />
+                        <input type="text" name="name" class="form-control" 
+                        {% if user.is_authenticated %}realtor
+                            value="{{ user.first_name }} {{ user.last_name }}"
+                        {% endif %}
+                        required />
                     </div>
                     <div class="form-group">
                         <label for="email" class="col-form-label">Email:</label>
@@ -252,6 +267,9 @@
                             type="email"
                             name="email"
                             class="form-control"
+                            {% if user.is_authenticated %}
+                                value={{ user.email }} 
+                            {% endif %}
                             required
                         />
                     </div>
