--- a/templates/partials/_alert.html
+++ b/templates/partials/_alert.html
@@ -11,7 +11,7 @@
             {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
                 error : 
             {% else %} 
-                {{ message.tags | title }}
+                {{ message.tags | title }} !
             {% endif %}
         </strong>
         {{ message }}
