--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -38,16 +38,25 @@
 
             <ul class="navbar-nav ml-auto">                
                 {% if user.is_authenticated %}
+
+                    <!-- dashboard -->               
                     <li {% if 'dashboard' in request.path %} class="nav-item active mr-3"
                         {% else %} class="nav-itme mr-3" {% endif %}>
-                    <a class="nav-link" href={% url "dashboard" %}>
-                    Welcome {{ user.username }} (dashboard)</a>
+                        <a class="nav-link" href={% url "dashboard" %}>
+                        Welcome {{ user.username }} (dashboard)</a>
                     </li>
+
+                    <!-- logout -->
                     <li class="nav-item mr-3">
-                        <a class="nav-link" href={% url "logout" %}>
+                        <a class="nav-link" href="javascript:{document.getElementById('logout').submit()}">
                             <i class="fas fa-sign-out-alt"></i> Logout</a
                         >
+                        <form action="{% url 'logout' %}" method="POST" id="logout">
+                            {% csrf_token %}
+                            <input type="hidden" />
+                        </form>
                     </li>
+
                 {% else %}
                     {% if "register" in request.path %}    
                         <li class="nav-item mr-3 active">
